style.css
/* ... */
@media screen and (max-width: 414px) {
  .landing-page {
    height: 760px;
  }

  .landing-page .trusted-title {
    display: block;
  }

  .landing-page .logo-title {
    font-size: 38px;
    margin-bottom: 0;
  }

  .landing-page .main-logo {
    top: 50px !important;
  }

  .landing-page .logo-title .subtitle {
    font-size: 28px;
  }

  .landing-page .mobile-menu {
    top: 100px;
  }

  .landing-page .mobile-menu-icon {
    width: 60px;
    height: 60px;
    top: 40px;
  }

  .signup-page {
    margin-top: 0px;
  }

  .signup-page .action-box {
    margin-top: 0px;
    margin-bottom: 0px;
    box-shadow: unset;
    border-top: none;
    box-shadow: inset 0 -1px 0 0 #f3f3f3;
  }

  .signup-page .action-box:last-child {
    min-height: 480px;
    height: 480px;
  }

  .marketplace {
    margin-top: 0px;
    margin-bottom: 80px;
  }

  .marketplace .description span {
    width: 300px;
    height: auto;
  }

  .our-team {
    margin-top: 0px;
  }

  .our-team .team-description {
    width: 305px;
    text-align: center;
    height: auto;
    margin-top: 200px;
  }

  .our-team .team-members {
    margin-left: 0;
    margin-right: 193px;
    margin-top: 100px;
  }

  .our-approach-mobile {
    height: 590px;
    margin-bottom: 0;
  }

  .our-approach-mobile .carousel-indicators {
    bottom: -20px;
  }

  .our-approach-mobile .carousel-inner .item .approach-content {
    width: 300px;
  }
  
  .profiles-mobile {
    margin-left: 30px;
  }

  .profiles-mobile .slider1 .slick-list {
    padding: 0 20% 0 0 !important;
  }
  /* .our-team .team-members .profiles {
    display: none;
  }

  .our-team .team-members .profiles-mobile {
    display: block;
    position: relative;
  }

  .our-team .team-members .profiles-mobile .team-members-grey-bg {
      width: calc(100vw - 1243px);
      height: 400px;
      background: #f3f3f3;
      position: absolute;
      top: 0;
      left: 0;
      z-index: -1;
  }

  .profiles-mobile {
    margin-top: 50px;
  }

  .profiles-mobile .carousel .carousel-indicators li {
    background-color: rgba(23, 23, 23, 0.1);
  }

  .profiles-mobile .profile {
    width: 270px;
  }

  .profiles-mobile .carousel {
    height: 600px;
  }

  .profiles-mobile .carousel .carousel-indicators li.active {
    background-color: #171717;
  }

  .profiles-mobile .carousel-inner .item .approach-content {
    width: 300px;
  }

  .profiles-mobile .carousel-indicators {
    left: unset;
    margin-left: unset;
    text-align: left;
    bottom: -20px;
  } */

  .owner-signup {
    padding: 100px 30px;
    margin-top: 120px;
  }

  .owner-signup .signup-title {
    font-size: 30px;
  }

  .owner-signup .tags li {
    white-space: nowrap;
  }

  .owner-signup .signup-form .form-row input {

  }

  .owner-signup .signup-form .form-row textarea {
    width: 300px;
  }

  .owner-signup .signup-form .form-row .submit-button {
    width: 300px;
  }

  .footer {
    height: 500px;
  }

  .footer .footer-logo {
    margin-bottom: 33px;
  }

  .footer .footer-menu {
    flex-direction: column;
  }

  .footer .footer-menu li {
    margin-top: 40px;
    margin-right: 0px;
  }

  .action-box .action-title {
    width: 320px;
    height: auto;
  }

  .marketplace .description span {
    width: 320px;
  }

  .action-box .action-description {
    text-align: center;
    padding: 0 15px;
  }
}

@media screen and (max-width: 1140px) {
  .our-approach {
    display: none;
  }
}

@media screen and (max-width: 375px) {
  .footer .footer-menu {
    width: 100%;
  }
}

::-webkit-input-placeholder { /* Chrome/Opera/Safari */
  font-family: proxima_novaregular;
  color: #fff;
}
::-moz-placeholder { /* Firefox 19+ */
  font-family: proxima_novaregular;
  color: #fff;
}
:-ms-input-placeholder { /* IE 10+ */
  font-family: proxima_novaregular;
  color: #fff;
}
:-moz-placeholder { /* Firefox 18- */
  font-family: proxima_novaregular;
  color: #fff;
}

